k8s/alloy-kube-prom-stack/httpbin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - image: ghcr.io/mccutchen/go-httpbin:2.20
          name: go-httpbin
          ports:
            - containerPort: 8080
