k8s/alloy-kube-prom-stack/httpbin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
spec:
  rules:
    - host: httpbin.k8s.internal
      http:
        paths:
          - backend:
              service:
                name: httpbin
                port:
                  number: 8080
            path: /
            pathType: Prefix
